--- a/theleafdiary.website/Pages/Index.cshtml
+++ b/theleafdiary.website/Pages/Index.cshtml
@@ -8,3 +8,8 @@
     <h1 class="display-4">The Leaf Diary</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+@foreach (var article in Model.Articles)
+{
+    <h2>@article.title</h2>
+}
